fix heart icon in stretch detail and fix home text

--- a/src/pages/Stretch/styles.scss
+++ b/src/pages/Stretch/styles.scss
@@ -72,3 +72,9 @@
     justify-content: center;
     width: 100%;
 }
+
+.title-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
